# dofus-opti

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
dofus_db/: Cargo.toml
dofus_db/data/: amulet_dark_vlad_collar.json  amulet_destroyer_torc.json  amulet_heavy_burden.json  amulet_khardboard_celestial_brooch.json  amulet_the_necromancer_song.json
dofus_db/data/Amulet/: amulet_1001_claws_torque.json  amulet_adventurer_amulet.json  amulet_aerdala_amulet.json  amulet_age_old_amulet.json  amulet_akornaddikt_amulet.json  amulet_akwadala_amulet.json  amulet_albueran_warrior_amulet.json  amulet_alowa_amulet.json  amulet_amlugo.json  amulet_amoolet.json  amulet_amourlet_ernal.json  amulet_amourlette_ernal.json  amulet_amufafah.json  amulet_amulet_cetera.json  amulet_amulet_of_double_luck.json  amulet_amulet_of_luck.json  amulet_amulet_of_the_bleeding_heart.json  amulet_amulet_of_the_depths.json  amulet_amulet_of_the_putrid_eye.json  amulet_amulet_of_the_sharp_eye.json  amulet_amulet_of_the_unspeakable.json  amulet_amulet_of_the_valiant_heart.json  amulet_amulethal.json  amulet_amunita.json  amulet_ancestral_torc.json  amulet_animulette.json  amulet_antyklime_ax_amulet.json  amulet_arachnamu.json  amulet_arachnee_ambamulet.json  amulet_autumn_leaf.json  amulet_aykido_medal.json  amulet_baahboh_insignia.json  amulet_badoul_amulet.json  amulet_bambulet.json  amulet_battleflag_amulet.json  amulet_bear_amulet.json  amulet_bearman_necklace.json  (+280 more)
dofus_db/golden/: gargandyas_necklace.json
dofus_db/src/: client.rs  file.rs  lib.rs  main.rs  model.rs  parser.rs
(+2370 files in other folders)
