[package]
name = "dofus-opti"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "dofusopti"
path = "src/lib.rs"