[package]
name = "dofus-opti-dofus-db"
version = "0.1.0"
edition = "2024"

[dependencies]
dofus-opti-core = { path = "../core" }
anyhow = "1.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "dofus_opti_dofus_db"
path = "src/lib.rs"

[[bin]]
name = "dofus-db-cli"
path = "src/main.rs"